--- a/roles/clearml-server/templates/apiserver.conf.j2
+++ b/roles/clearml-server/templates/apiserver.conf.j2
@@ -84,7 +84,7 @@
             enabled: true
             pass_hashed: true
             users: [
-{% for user in users %}
+{% for user in clearml_users %}
                 {
                     username: "{{ user.username }}"
                     password: "{{ user.pass }}"
