--- a/roles/clearml-server/templates/docker-compose.yml.j2
+++ b/roles/clearml-server/templates/docker-compose.yml.j2
@@ -128,8 +128,8 @@ services:
       CLEARML_WEB_HOST: ${CLEARML_WEB_HOST:-}
       CLEARML_API_HOST: http://apiserver:8008
       CLEARML_FILES_HOST: ${CLEARML_FILES_HOST:-}
-      CLEARML_API_ACCESS_KEY: ${CLEARML_API_ACCESS_KEY:-}
-      CLEARML_API_SECRET_KEY: ${CLEARML_API_SECRET_KEY:-}
+      CLEARML_API_ACCESS_KEY: {{ clearml_access_key }}
+      CLEARML_API_SECRET_KEY: {{ clearml_secret_key }}
       CLEARML_AGENT_GIT_USER: ${CLEARML_AGENT_GIT_USER}
       CLEARML_AGENT_GIT_PASS: ${CLEARML_AGENT_GIT_PASS}
       CLEARML_AGENT_UPDATE_VERSION: ${CLEARML_AGENT_UPDATE_VERSION:->=0.17.0}
@@ -148,8 +148,10 @@ services:
     depends_on:
       - apiserver
 
+
 networks:
   backend:
     driver: bridge
   frontend:
     driver: bridge
+
